style: Fix registration appearance in dark mode
style: Fix registration appearance in dark mode

* Fix border color
* Fix background color

--- a/front-end/src/pages/registration.css
+++ b/front-end/src/pages/registration.css
@@ -7,9 +7,10 @@
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid lightgray;
   text-align: left;
   border-radius: 5%;
+  background-color: var(--card-background-color);
 }
 Form {
   text-align: center;
